# musicando

./: README.md  escalas.py  mkdocs.yml  pyproject.toml
.github/workflows/: pipelines.yaml
docs/: index.md
musicando/: __init__.py  acordes.py  cli.py  constantes.py  conversores.py  escala.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_conversores.py  test_escala.py
