[tool.poetry]
name = "musicando"
version = "0.1.0"
description = ""
authors = ["tiago.cipriano <tiago.cipriano@luilzalabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.28"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 120

[tool.taskipy.tasks]
doc = "mkdocs serve"
lint = "blue --check --diff . && isort --check --diff ."
pre_test = "task lint"
post_test = "coverage html"
test = "pytest -s -x --cov=musicando -vv"